menambahkan about dan contact serta memperbaiki map dan logo sponsor

--- a/agency/css/style.css
+++ b/agency/css/style.css
@@ -917,7 +917,8 @@ blockquote > cite {
     padding: 0px;
   }
   .header-area .logo {
-    margin-top: 27px !important;
+    align-items: center;
+    /* margin-top: 27px !important; */
     margin-left: 30px;
   }
   .header-area .menu-trigger {
