design navbar&footer dari figma

--- a/agency/css/about-contact.css
+++ b/agency/css/about-contact.css
@@ -142,517 +142,23 @@
   transition: all 0.15s ease-in;
 }
 
-/*  */
-
 /* ===================================
-    Header
+   About Section
 ====================================== */
 
-/* logo change */
-
-header .logo .logo-dark,
-header .logo .logo-light {
-  visibility: hidden;
-  opacity: 0;
-  width: 0;
-  transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-}
-header .logo .logo-dark.default,
-header .logo .logo-light.default {
-  visibility: visible;
-  opacity: 1;
-  width: auto;
-  transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-}
-header.header-appear nav .logo .logo-light,
-header.header-appear nav.header-dark .logo .logo-light {
-  visibility: visible;
-  opacity: 1;
-  width: auto;
-  transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-}
-header.header-appear nav .logo .logo-dark,
-header.header-appear nav.header-dark .logo .logo-dark {
-  visibility: hidden;
-  opacity: 0;
-  width: 0;
-  transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-}
-header.header-appear nav .logo .logo-dark,
-header.header-appear nav.header-light .logo .logo-dark {
-  visibility: visible;
-  opacity: 1;
-  width: auto;
-  transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-}
-header.header-appear nav .logo .logo-light,
-header.header-appear nav.header-light .logo .logo-light {
-  visibility: hidden;
-  opacity: 0;
-  width: 0;
-  transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-}
-header a.logo {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 1;
-}
-header a.logo img {
-  max-width: 150px;
+.heading-area {
+  align-items: center !important;
 }
 
-/* nav top default */
-
-.navbar-top-default {
-  position: absolute;
-  top: 0;
-  z-index: 98;
-  overflow: hidden;
-  height: 90px;
-  width: 100%;
-  padding: 0;
-  margin-top: 20px;
-  -webkit-transition: all 0.1s ease;
-  -moz-transition: all 0.1s ease;
-  -ms-transition: all 0.1s ease;
-  -o-transition: all 0.1s ease;
-  transition: all 0.1s ease;
-}
-
-.navbar-top-default.navbar-gradient .navbar-nav .nav-link {
-  padding: 0.4rem 0;
-  color: #1e1e1e;
-  font-weight: 600;
-  min-width: 100px;
-  text-align: center;
-  font-size: 14px;
-}
-
-.header-appear .navbar-top-default.navbar-gradient .navbar-nav .menu-line {
-  color: #ea5762;
-}
-
-.header-appear .navbar-top-default {
-  height: 80px;
-  position: fixed;
-  z-index: 97;
-  margin-top: 0;
-  background: #ea5762;
-  -webkit-animation-name: animationFade;
-  -o-animation-name: animationFade;
-  animation-name: animationFade;
-  -webkit-animation-duration: 1s;
-  -o-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  -o-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.35);
-  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.35);
-}
-
-.header-appear .navbar-top-default.navbar-gradient {
-  background: #fff;
-  background: -moz-linear-gradient(left, #fff 2%, #fff 82%);
-  background: -webkit-linear-gradient(left, #fff 2%, #fff 82%);
-  background: linear-gradient(to right, #fff 2%, #fff 82%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFF', endColorstr='#FFF',GradientType=1 );
-}
-
-.navbar-top-default #agency {
-  margin-right: -30px;
-}
-
-.nav-icon .navbar-nav {
-  position: relative;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.menu-line {
-  position: absolute;
-  top: -20px;
+.heading-area .sub-title {
   font-size: 18px;
-  color: #060000;
-  left: 0;
-  display: block;
-  text-align: center;
-  width: 100px;
-  height: 30px;
-  pointer-events: none;
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-  -webkit-transition-timing-function: cubic-bezier(1, 0.01, 0, 1);
-  -webkit-transition-timing-function: cubic-bezier(1, 0.01, 0, 1.22);
-  transition-timing-function: cubic-bezier(1, 0.01, 0, 1.22);
+  font-weight: 400;
 }
 
-.nav-icon .navbar-nav .nav-link:nth-child(1).active ~ .menu-line {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+.heading-area .title {
+  font-size: 40px;
+  font-weight: 600;
 }
-
-.nav-icon .navbar-nav .nav-link:nth-child(2).active ~ .menu-line {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(3).active ~ .menu-line {
-  -webkit-transform: translate3d(200%, 0, 0);
-  transform: translate3d(200%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(4).active ~ .menu-line {
-  -webkit-transform: translate3d(300%, 0, 0);
-  transform: translate3d(300%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(5).active ~ .menu-line {
-  -webkit-transform: translate3d(400%, 0, 0);
-  transform: translate3d(400%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(6).active ~ .menu-line {
-  -webkit-transform: translate3d(500%, 0, 0);
-  transform: translate3d(500%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(7).active ~ .menu-line {
-  -webkit-transform: translate3d(600%, 0, 0);
-  transform: translate3d(600%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(1):hover ~ .menu-line {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(2):hover ~ .menu-line {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(3):hover ~ .menu-line {
-  -webkit-transform: translate3d(200%, 0, 0);
-  transform: translate3d(200%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(4):hover ~ .menu-line {
-  -webkit-transform: translate3d(300%, 0, 0);
-  transform: translate3d(300%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(5):hover ~ .menu-line {
-  -webkit-transform: translate3d(400%, 0, 0);
-  transform: translate3d(400%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(6):hover ~ .menu-line {
-  -webkit-transform: translate3d(500%, 0, 0);
-  transform: translate3d(500%, 0, 0);
-}
-
-.nav-icon .navbar-nav .nav-link:nth-child(7):hover ~ .menu-line {
-  -webkit-transform: translate3d(600%, 0, 0);
-  transform: translate3d(600%, 0, 0);
-}
-
-/* ===================================
-    Header
-====================================== */
-
-.header-area {
-  position: fixed;
-  top: 30px;
-  left: 0px;
-  right: 0px;
-  z-index: 100;
-  height: 100px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-}
-
-.header-area .main-nav {
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-  border-radius: 40px;
-  min-height: 80px;
-  background: #fff;
-}
-
-.header-area .main-nav .logo {
-  float: left;
-  margin-top: 37px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-  margin-left: 30px;
-}
-
-.header-area .main-nav .logo img {
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-  width: 100px;
-}
-
-.header-area .main-nav .nav {
-  float: right;
-  margin-top: 27px;
-  margin-left: 0px;
-  margin-right: 30px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-  position: relative;
-  z-index: 999;
-}
-
-.header-area .main-nav .nav li {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.header-area .main-nav .nav li:last-child {
-  padding-right: 0px;
-}
-
-.header-area .main-nav .nav li a {
-  display: block;
-  font-weight: 500;
-  font-size: 13px;
-  color: #fff;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-  height: 40px;
-  line-height: 40px;
-  border: transparent;
-  letter-spacing: 1px;
-}
-
-.header-area .main-nav .nav li a:hover {
-  color: #ea5762;
-}
-
-.header-area .main-nav .menu-trigger {
-  cursor: pointer;
-  display: block;
-  position: absolute;
-  top: 23px;
-  width: 32px;
-  height: 40px;
-  text-indent: -9999em;
-  z-index: 99;
-  right: 40px;
-  display: none;
-}
-
-.header-area .main-nav .menu-trigger span,
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
-  -moz-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-  background-color: #3b566e;
-  display: block;
-  position: absolute;
-  width: 30px;
-  height: 2px;
-  left: 0;
-}
-
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
-  -moz-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-  background-color: #3b566e;
-  display: block;
-  position: absolute;
-  width: 30px;
-  height: 2px;
-  left: 0;
-  width: 75%;
-}
-
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
-  content: "";
-}
-
-.header-area .main-nav .menu-trigger span {
-  top: 16px;
-}
-
-.header-area .main-nav .menu-trigger span:before {
-  -moz-transform-origin: 33% 100%;
-  -ms-transform-origin: 33% 100%;
-  -webkit-transform-origin: 33% 100%;
-  transform-origin: 33% 100%;
-  top: -10px;
-  z-index: 10;
-}
-
-.header-area .main-nav .menu-trigger span:after {
-  -moz-transform-origin: 33% 0;
-  -ms-transform-origin: 33% 0;
-  -webkit-transform-origin: 33% 0;
-  transform-origin: 33% 0;
-  top: 10px;
-}
-
-.header-area .main-nav .menu-trigger.active span,
-.header-area .main-nav .menu-trigger.active span:before,
-.header-area .main-nav .menu-trigger.active span:after {
-  background-color: transparent;
-  width: 100%;
-}
-
-.header-area .main-nav .menu-trigger.active span:before {
-  -moz-transform: translateY(6px) translateX(1px) rotate(45deg);
-  -ms-transform: translateY(6px) translateX(1px) rotate(45deg);
-  -webkit-transform: translateY(6px) translateX(1px) rotate(45deg);
-  transform: translateY(6px) translateX(1px) rotate(45deg);
-  background-color: #3b566e;
-}
-
-.header-area .main-nav .menu-trigger.active span:after {
-  -moz-transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  -ms-transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  -webkit-transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  background-color: #3b566e;
-}
-
-.header-area.header-sticky {
-  min-height: 80px;
-}
-
-.header-area.header-sticky .logo {
-  margin-top: 15px;
-}
-
-.header-area.header-sticky .nav {
-  margin-top: 20px !important;
-}
-
-.header-area.header-sticky .nav li a {
-  color: #1e1e1e;
-}
-
-.header-area.header-sticky .nav li a.active {
-  color: #ea5762;
-}
-
-@media (max-width: 1200px) {
-  .header-area .main-nav .nav li {
-    padding-left: 12px;
-    padding-right: 12px;
-  }
-  .header-area .main-nav:before {
-    display: none;
-  }
-}
-
-@media (max-width: 991px) {
-  .header-area {
-    padding: 0px 15px;
-    height: 80px;
-    box-shadow: none;
-    text-align: center;
-  }
-  .header-area .container {
-    padding: 0px;
-  }
-  .header-area .logo {
-    align-items: center;
-    /* margin-top: 27px !important; */
-    margin-left: 30px;
-  }
-  .header-area .menu-trigger {
-    display: block !important;
-  }
-  .header-area .main-nav {
-    overflow: hidden;
-  }
-  .header-area .main-nav .nav {
-    float: none;
-    width: 100%;
-    margin-top: 80px !important;
-    display: none;
-    -webkit-transition: all 0s ease 0s;
-    -moz-transition: all 0s ease 0s;
-    -o-transition: all 0s ease 0s;
-    transition: all 0s ease 0s;
-    margin-left: 0px;
-  }
-  .header-area .main-nav .nav li:first-child {
-    border-top: 1px solid #eee;
-  }
-  .header-area .main-nav .nav li {
-    width: 100%;
-    background: #fff;
-    border-bottom: 1px solid #eee;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-  .header-area .main-nav .nav li a {
-    height: 50px !important;
-    line-height: 50px !important;
-    padding: 0px !important;
-    border: none !important;
-    background: #fff !important;
-    color: #3b566e !important;
-  }
-  .header-area .main-nav .nav li a:hover {
-    background: #eee !important;
-  }
-}
-
-@media (min-width: 992px) {
-  .header-area .main-nav .nav {
-    display: flex !important;
-  }
-}
-
-/*  */
 
 /**
 * ! Style rules for About Us
@@ -716,6 +222,15 @@ header a.logo img {
 
 .label-title {
   padding-bottom: 5rem;
+  font-family: var(--font-2);
+  font-size: var(--label-text);
+  letter-spacing: var(--ls);
+
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.label-title2 {
   font-family: var(--font-2);
   font-size: var(--label-text);
   letter-spacing: var(--ls);
