--- a/agency/css/style-blog.css
+++ b/agency/css/style-blog.css
@@ -1,21 +1,3 @@
-/* ===================================
-    About
-====================================== */
-
-/*
-    Theme Name: MegaOne
-    Theme URI:
-    Author: Themes Industry
-    Author URI:
-    Description: One Page Parallax Template
-    Tags: one page, multipurpose, parallax, creative, html5
-
- */
-
-/* ===================================
-    Table of Content
-====================================== */
-
 /*  - Fonts
     - General
     - Fonts
@@ -359,12 +341,6 @@ blockquote > cite {
   color: #ffffff;
 }
 
-.btn.btn-green {
-  background: #63c7b2;
-  border-color: #63c7b2;
-  color: #ffffff;
-}
-
 /*Button Hover bg*/
 .btn.btn-hvr-white:hover,
 .btn.btn-hvr-white:focus {
@@ -425,10 +401,10 @@ blockquote > cite {
 }
 
 .gradient-bg1 {
-  background: #ceffbd;
-  background: -moz-linear-gradient(left, #a8efff 12%, #ceffbd 82%);
-  background: -webkit-linear-gradient(left, #a8efff 12%, #ceffbd 82%);
-  background: linear-gradient(to right, #a8efff 12%, #ceffbd 82%);
+  background: #CEFFBD;
+  background: -moz-linear-gradient(left, #A8EFFF 12%, #CEFFBD 82%);
+  background: -webkit-linear-gradient(left, #A8EFFF 12%, #CEFFBD 82%);
+  background: linear-gradient(to right, #A8EFFF 12%, #CEFFBD 82%);
 }
 
 .gradient-bg2 {
@@ -446,15 +422,13 @@ blockquote > cite {
 }*/
 
 #Program {
-  background: linear-gradient(
-    to right,
-    #ceffbd,
-    #fde1b1
-  ); /* Ganti warna sesuai keinginan Anda */
+  background: linear-gradient(to right, #CEFFBD, #FDE1B1); /* Ganti warna sesuai keinginan Anda */
   /* Tambahan gaya lainnya, jika diperlukan 
   padding: 50px 0;  Padding untuk memberikan ruang di sekitar konten 
   color: #fff;  Warna teks untuk kontras dengan latar belakang */
 }
+
+
 
 /* text-color */
 .main-color {
@@ -848,7 +822,7 @@ header a.logo img {
 }
 
 .header-appear .navbar-top-default.navbar-gradient .navbar-nav .menu-line {
-  color: #ea5762;
+  color: #EA5762;
 }
 
 .header-appear .navbar-top-default {
@@ -856,7 +830,7 @@ header a.logo img {
   position: fixed;
   z-index: 97;
   margin-top: 0;
-  background: #ea5762;
+  background: #EA5762;
   -webkit-animation-name: animationFade;
   -o-animation-name: animationFade;
   animation-name: animationFade;
@@ -871,10 +845,10 @@ header a.logo img {
 }
 
 .header-appear .navbar-top-default.navbar-gradient {
-  background: #fff;
-  background: -moz-linear-gradient(left, #fff 2%, #fff 82%);
-  background: -webkit-linear-gradient(left, #fff 2%, #fff 82%);
-  background: linear-gradient(to right, #fff 2%, #fff 82%);
+  background: #FFF;
+  background: -moz-linear-gradient(left, #FFF 2%, #FFF 82%);
+  background: -webkit-linear-gradient(left, #fff 2%, #FFF 82%);
+  background: linear-gradient(to right, #FFF 2%, #FFF 82%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFF', endColorstr='#FFF',GradientType=1 );
 }
 
@@ -1327,6 +1301,7 @@ header .nav-holder.active .shape-right {
   margin-bottom: 20px; /* Sesuaikan dengan jarak yang diinginkan antar elemen */
 }
 
+
 .nav-holder .full-menu-detail .title:before {
   content: "";
   height: 3px;
@@ -1335,7 +1310,7 @@ header .nav-holder.active .shape-right {
   top: auto;
   bottom: -25px;
   left: 0;
-  background: #fff;
+  background: #FFF;
   display: block;
 }
 
@@ -1505,7 +1480,7 @@ span.anchor-circle {
   width: 1px;
   height: 50%;
   position: absolute;
-  background-color: #060000;
+  background-color: #060000
   opacity: 0.5;
   left: auto;
   right: 5px;
@@ -1829,7 +1804,8 @@ span.anchor-circle {
 ====================================== */
 .image-with-margin {
   margin-right: -80px;
-}
+} 
+
 
 .team-item1 {
   cursor: pointer;
@@ -1841,7 +1817,7 @@ span.anchor-circle {
   display: inline-block;
   margin-bottom: 40px;
   border-radius: 20px;
-  border: 4px solid #eb5763;
+  border: 4px solid #EB5763;
 }
 
 .team-item1:hover .team-image {
@@ -1931,7 +1907,8 @@ span.anchor-circle {
 ====================================== */
 .image-with-margin {
   margin-right: -80px;
-}
+} 
+
 
 .team-item2 {
   cursor: pointer;
@@ -1943,7 +1920,7 @@ span.anchor-circle {
   display: inline-block;
   margin-bottom: 40px;
   border-radius: 20px;
-  border: 4px solid #f1a325;
+  border: 4px solid #F1A325;
 }
 
 .team-item2:hover .team-image {
@@ -2028,12 +2005,14 @@ span.anchor-circle {
   color: #fff;
 }
 
+
 /* ===================================
    program3  card
 ====================================== */
 .image-with-margin {
   margin-right: -80px;
-}
+} 
+
 
 .team-item3 {
   cursor: pointer;
@@ -2045,7 +2024,7 @@ span.anchor-circle {
   display: inline-block;
   margin-bottom: 40px;
   border-radius: 20px;
-  border: 4px solid #63c7b2;
+  border: 4px solid #63C7B2;
 }
 
 .team-item3:hover .team-image {
@@ -2129,6 +2108,8 @@ span.anchor-circle {
 .team-item3 .team-social a i:hover {
   color: #fff;
 }
+
+
 
 /* ===================================
     Cube Portfolio
@@ -2480,7 +2461,7 @@ button.main-button:hover {
 }
 
 .bg-map {
-  background-image: url("../img/stem-map.png");
+  background-image: url("../img/map.jpg");
 }
 
 /* ===================================
@@ -2646,7 +2627,7 @@ canvas {
   position: relative;
   text-align: center;
   padding: 230px 0px 130px;
-  background-color: #ea4970;
+  background-color: #EA4970;
 }
 
 .page-title .pattern-layers {
@@ -2688,7 +2669,7 @@ canvas {
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
-}
+} 
 
 .page-title .auto-container {
   position: relative;
@@ -4289,6 +4270,8 @@ select.inputerror {
   .footer-social {
     text-align: center;
   }
+  
+
 }
 
 @media screen and (max-width: 400px) {
@@ -4301,147 +4284,6 @@ select.inputerror {
     left: 43%;
   }
 }
-
-.page-tittle {
-  position: relative;
-  text-align: center;
-  padding: 230px 0px 130px;
-  background-color: #ea4970;
-}
-
-.page-tittle .pattern-layers {
-  position: absolute;
-  content: "";
-  left: 0px;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-}
-
-.page-tittle .pattern-layers .layer-one {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-position: bottom left;
-  background-repeat: no-repeat;
-  background-image: url("../img/pattern-1.png");
-}
-
-.page-tittle .pattern-layers .layer-two {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("../img/kuning.png");
-
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.btn.btn-red {
-  background: #eb5763;
-  border-color: #eb5763;
-  color: #ffffff;
-}
-
-.page-tittle {
-  position: relative;
-  text-align: center;
-  padding: 230px 0px 130px;
-  background-color: #ea4970;
-}
-
-.page-tittle .pattern-layers {
-  position: absolute;
-  content: "";
-  left: 0px;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-}
-
-.page-tittle .pattern-layers .layer-one {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-position: bottom left;
-  background-repeat: no-repeat;
-  background-image: url("../img/pattern-1.png");
-}
-
-.page-tittle .pattern-layers .layer-two {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("");
-
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.page-tittle .auto-container {
-  position: relative;
-}
-
-.page-tittle h2 {
-  position: relative;
-  color: #ffffff;
-  font-weight: 800;
-  line-height: 1.2em;
-  margin-bottom: 10px;
-  font-size: 3.5rem;
-  text-transform: capitalize;
-  -webkit-text-stroke: 1px rgb(185, 51, 51);
-  text-stroke: 1px rgb(185, 51, 51);
-}
-
-.btn.btn-yellow {
-  background: #f1a325;
-  border-color: #f1a325;
-  color: #ffffff;
-}
-
-.page-tittle .auto-container {
-  position: relative;
-}
-
-.page-tittle h2 {
-  position: relative;
-  color: #ffffff;
-  font-weight: 800;
-  line-height: 1.2em;
-  margin-bottom: 10px;
-  font-size: 3.5rem;
-  text-transform: capitalize;
-  -webkit-text-stroke: 1px rgb(185, 51, 51); // For WebKit browsers like Chrome and Safari /
-  text-stroke: 1px rgb(185, 51, 51); // Standard property */
-}
-
 /* 
 ---------------------------------------------
 footer
@@ -4509,133 +4351,7 @@ footer .copyright {
   }
 }
 
-/* 
----------------------------------------------
-footer
---------------------------------------------- 
-*/
-footer {
-  background-color: #2e4150;
-  padding-top: 30px;
-  bottom: 0;
-}
 
-footer .social {
-  overflow: hidden;
-  margin-top: 10px;
-  text-align: center;
-}
 
-footer .social li {
-  margin: 0px 10px;
-  display: inline-block;
-}
 
-footer .social li a {
-  color: #9d5bd9;
-  text-align: center;
-  background-color: #fff;
-  width: 36px;
-  height: 36px;
-  line-height: 36px;
-  border-radius: 50%;
-  display: inline-block;
-  font-size: 16px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-}
 
-footer .social li a:hover {
-  background-color: #ea5762;
-  color: #fff;
-}
-
-footer .copyright {
-  text-align: center;
-  margin-top: 30px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  font-weight: 400;
-  font-size: 12px;
-  color: #fff;
-  letter-spacing: 0.88px;
-  text-transform: uppercase;
-}
-
-@media (max-width: 991px) {
-  footer .text {
-    margin-bottom: 30px;
-  }
-  footer h5 {
-    margin-bottom: 15px;
-  }
-  footer .footer-nav {
-    margin-bottom: 30px;
-  }
-}
-
-.page-tittlei {
-  position: relative;
-  text-align: center;
-  padding: 230px 0px 130px;
-  background-color: #51d7b8;
-}
-
-.page-tittlei .pattern-layers {
-  position: absolute;
-  content: "";
-  left: 0px;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-}
-
-.page-tittlei .pattern-layers .layer-one {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-position: bottom left;
-  background-repeat: no-repeat;
-  background-image: url("../img/pattern-1.png");
-}
-
-.page-tittlei .pattern-layers .layer-two {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("");
-  /* Add the overlay using ::before pseudo-element */
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.page-tittlei .auto-container {
-  position: relative;
-}
-
-.page-tittlei h2 {
-  position: relative;
-  color: #ffffff;
-  font-weight: 800;
-  line-height: 1.2em;
-  margin-bottom: 10px;
-  font-size: 3.5rem;
-  text-transform: capitalize;
-  -webkit-text-stroke: 1px rgb(0, 255, 251); /* For WebKit browsers like Chrome and Safari */
-  text-stroke: 1px rgb(0, 255, 251); /* Standard property */
-}
