--- a/agency/css/style.css
+++ b/agency/css/style.css
@@ -4639,3 +4639,22 @@ footer .copyright {
   -webkit-text-stroke: 1px rgb(0, 255, 251); /* For WebKit browsers like Chrome and Safari */
   text-stroke: 1px rgb(0, 255, 251); /* Standard property */
 }
+
+/* VISI MISI */
+
+.visi-misi-part {
+  padding: 20px 35px;
+  border: 1px solid #f8f9fa;
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+
+  border-radius: 20px;
+  background-color: transparent;
+  margin-top: 4rem;
+  text-align: left;
+
+  justify-content: space-between;
+}
+
+.visi-misi-text {
+  text-align: justify;
+}
